# swift-ai-trader

./: .env  .gitignore  Dockerfile  README.md  RISK_MANAGEMENT_CLEANUP_SUMMARY.md  SPA_DEPLOYMENT.md  check_agent_status.py  check_status.py  deploy.ps1  dev-server.ps1  docker-compose.yml  fix_risk_management_imports.py  index.html  init_db.sql  nginx.conf  package-lock.json  package.json  requirements.txt  run_all.bat  run_all.ps1  setup-env.ps1  tailwind.config.ts  test-engine-fix.md  test_risk_management_cleanup.py  test_supabase.py  verify_position.py  vite.config.ts
waves_quant_agi/engine_agents/validation/: Cargo.toml  __init__.py  enhanced_validation_agent_v2.py  python_bridge.py  test_validation.py  validation_agent.py
waves_quant_agi/engine_agents/validation/core/: __init__.py  data_quality_monitor.py  data_validator_simple.py
waves_quant_agi/engine_agents/validation/docs/: api_documentation.md  contribution.md  coordination_models.md  training.md
waves_quant_agi/engine_agents/validation/learning_layer/hybrid_training/: counterfactual_simulator.py
waves_quant_agi/engine_agents/validation/learning_layer/internal/: audit_memory.py  research_engine.py  training_module.py  validation_learning.py
waves_quant_agi/engine_agents/validation/src/: lib.rs  orchestrator.rs  router.rs
waves_quant_agi/engine_agents/validation/src/validators/ccc/: consistency.rs  cost_analysis.rs  mod.rs
waves_quant_agi/engine_agents/validation/src/validators/market_conditions/: time_sensitivity.rs
waves_quant_agi/engine_agents/validation/src/validators/risk/: mod.rs
(+1000 files in other folders)
