[package]
name = "quantum_agents_validation"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
tonic = "0.8"
prost = "0.11"
redis = { version = "0.21", features = ["tokio-comp"] }
async-trait = "0.1"
pyo3 = { version = "0.16", features = ["extension-module"] }

[build-dependencies]
tonic-build = "0.8"